<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="25dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/etCommands"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"  
        android:orientation="horizontal" >

        <Button
            android:layout_weight="20"
            android:id="@+id/bResult"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/bNewButton" />

        <ToggleButton
            android:layout_weight="80"
            android:padding="10dp"
            android:checked="TRUE"
            android:id="@+id/tbPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

	</LinearLayout>
	
    <TextView
        android:id="@+id/tvResults"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/invalid" />

</LinearLayout>