<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.jLeta.myfirstandroidapp.Starter" >

    <TextView
        android:id="@+id/tvispaly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/tvOutPut" 
        android:layout_marginTop="18dp"
        android:textSize="35sp"
         />

    <Button
        android:id="@+id/bAdd"
        android:layout_below="@+id/tvispaly"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:textSize="20sp"
        android:text="@string/add" />

    <Button
        android:id="@+id/bSub"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bAdd"
        android:layout_below="@+id/bAdd"
        android:layout_marginTop="18dp"
        android:text="@string/subtract"
        android:textSize="20sp" />

</RelativeLayout>